# file-share-server-rust

./: Cargo.toml  README.md
config/: app.toml
file/fusia/: README.html
src/: common_operate.rs  file_operate.rs  lib.rs  main.rs  routing.rs
src/routing/: web_method_routing.rs  web_url_params.rs
static/: index.html  script.js
tests/: address_operate_test.rs
