[package]
name = "file-share-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.19"
toml = "0.7.6"
serde = {version = "1.0.171", features = ["derive"] }
actix-web = "4"
actix-files = "0.6.2"
env_logger = "0.10.0"
actix-multipart = "0.6.0"
futures-util = "0.3.28"
